# nanowasm

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
spec/: Cargo.toml  README.md  build.rs  run-nanowasm-tests.py
spec/src/: lib.rs
src/: interpreter.rs  lib.rs  loader.rs  tests.rs  types.rs  util.rs
test_programs/: fib.wat  inc.wast  inc.wat  print.wast
