[package]
name = "nanowasm"
version = "0.0.1"
authors = ["Simon Heath <icefoxen@gmail.com>"]
description = "A small, stand-alone WebAssembly interpreter."
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/nanowasm/"
repository = "https://github.com/icefoxen/nanowasm"
readme = "README.md"
keywords = ["webassembly", "wasm", "interpreter"]
categories = ["emulators", "api-bindings"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
parity-wasm = "0.20"
clap = "2"
byteorder = "1"
num = "0.1"