[package]
name = "nanowasm"
version = "0.0.2"
authors = ["Simon Heath <icefoxen@gmail.com>"]
description = "A small, stand-alone WebAssembly interpreter."
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/nanowasm/"
repository = "https://github.com/icefoxen/nanowasm"
readme = "README.md"
keywords = ["webassembly", "wasm", "interpreter"]
categories = ["emulators", "api-bindings"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
parity-wasm = "0.27"
clap = "2"
byteorder = "1"
num = "0.1"
nom = "3"
serde = "1"
serde_derive = "1"
serde_json = "1"
lazy_static = "1"
failure = "0.1"
wabt = "0.2"

[dev-dependencies]
