[package]
name = "nanowasm-spec-tests"
version = "0.0.0"
authors = ["Simon Heath <icefoxenf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/icefoxen/nanowasm"
homepage = "https://github.com/icefox-nanowasm"
description = "Test suite for nanowasm to test against official WASM test suite"
build = "build.rs"

[build-dependencies]
cmake = "0.1"

[dependencies]
nanowasm = { path = ".." }

[dev-dependencies]
nanowasm = { path = ".." }
